missing files added

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
 all:
 	g++ clientMain.cpp ftpClient.cpp ftpResponse.cpp ftpRequest.cpp tcpSocket.cpp -o client
-	g++ ftpServer.cpp ftpResponse.cpp ftpRequest.cpp tcpSocket.cpp auth.cpp -o server
+	g++ serverMain.cpp ftpServer.cpp ftpResponse.cpp ftpRequest.cpp tcpSocket.cpp auth.cpp -o server
 
